# crud-api

./: .gitignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
crud_api/: asyncpg.py  base.py
crud_api/contrib/: fastapi.py
examples/: asyncpg.py
