[tool.poetry]
name = "crud-api"
version = "0.1.0"
description = ""
authors = ["jmarkin <me@jmarkin.ru>"]
readme = "README.md"
packages = [{ include = "crud_api" }]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.8"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.270"
isort = "^5.12.0"
ipython = "^8.14.0"
fastapi = "^0.96.0"
mypy = "^1.3.0"
black = "^23.3.0"
asyncpg = "^0.27.0"
uvicorn = "^0.22.0"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120

[tool.black]
line-length = 120
target-version = ["py310", "py311"]

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
line-length = 120
target-version = "py310"
ignore = ["F401"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
